<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#29ae6c">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/Hello_write_acctoin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="321dp"
        android:layout_height="93dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#9C85273A"
        android:text="@string/add_boks"
        android:textColor="#E38E0F"
        android:textSize="25sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="321dp"
        android:layout_height="93dp"
        android:layout_marginBottom="172dp"
        android:backgroundTint="#9C85273A"
        android:text="@string/show_book"
        android:textColor="#E38E0F"
        android:textSize="27sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>